packages/kit/test/apps/basics/src/routes/errors/endpoint-throws/page-endpoint-get-throws.svelte
<p>
  Should not show up.
</p>